--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
     <section id="about" class="fullpage-section">
         <div class="content">
             <h2>Tentang Saya</h2>
-            <div class="about-grid">
-                <div class="profile-img">
-                    <img src="assets/images/profile.png" alt="Profil">
-                </div>
+            <div class="about-grid" style="display: flex; justify-content: center; align-items: center;">
+
                 <div class="about-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, temporibus. Sunt corporis hic nostrum culpa non distinctio numquam, aliquid fugiat nulla dolores esse odio inventore nisi accusantium consectetur soluta? Maiores!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste omnis exercitationem accusamus optio tempore? Quam blanditiis fuga, dolores laborum labore, voluptatum perspiciatis optio cupiditate reiciendis nihil magni praesentium quidem autem quaerat eius aliquam quis ex. Natus dolore, quos architecto error ullam ipsum ipsam tempora praesentium enim vitae dolores porro ea autem esse ducimus nam perspiciatis temporibus quisquam, unde eaque velit? Eveniet quidem recusandae temporibus accusamus est in cum exercitationem sapiente maxime facilis dignissimos unde nulla voluptatum ullam, veritatis, rerum deserunt fugiat doloremque omnis suscipit soluta laborum molestiae. Itaque molestiae accusamus minima sequi laborum harum similique officiis asperiores illo, ea ex.</p>
                     <div class="skills">
                         <span>HTML</span>
                         <span>CSS</span>
@@ -55,18 +53,20 @@
             <h2>Projek Terbaru</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/web 7e.png" alt="Projek 1">
-                    </div>
+                    <div class="mobile-link-info">Klik gambar untuk membuka web project</div>
+<a href="https://petocrafto.github.io/7ESMP6TEMANGGUNG/" class="project-img project-link" target="_blank" title="Kunjungi Web Kelas">
+    <img src="assets/images/web 7e.png" alt="Projek 1">
+</a>
                     <h3>Web Kelas</h3>
-                    <p>Ini adalah Web untuk kelas 7E Di SMP Negeri 6 Temanggung</p>
+                    <p>Ini adalah Web untuk kelas 7E Di SMP Negeri 6 Temanggung yang sudah dikembangkan selama 3 kali</p>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/form.png" alt="Projek 2">
-                    </div>
+                    <div class="mobile-link-info">Klik gambar untuk membuka web project</div>
+<a href="https://petocrafto.github.io/requestmusic/" class="project-img project-link" target="_blank" title="Kunjungi Form Request Music">
+    <img src="assets/images/form.png" alt="Projek 2">
+</a>
                     <h3>Form Request Music</h3>
-                    <p>Web untuk request music dengan fitur admin</p>
+                    <p>Web untuk request music dengan fitur admin dan pencarian video youtube menggunakn API YouTube</p>
                 </div>
             </div>
         </div>
