--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <img src="assets/images/form.png" alt="Projek 2">
 </a>
                     <h3>Form Request Music</h3>
-                    <p>Web untuk request music dengan fitur admin dan pencarian video youtube menggunakn API YouTube</p>
+                    <p>Web request musik dengan pencarian YouTube API, data disimpan di MongoDB, source code di GitHub, dan Vercel sebagai perantara hosting frontend dan API.</p>
                 </div>
             </div>
         </div>
