--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
                         <a href="https://www.instagram.com/nahhelbro0?igsh=NWxjbXpkcWxydWtx" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
                         <a href="https://tiktok.com/@kenz_____0" target="_blank"><i class="fab fa-tiktok"></i> TikTok 1</a>
                         <a href="https://tiktok.com/@nakamaprst" target="_blank"><i class="fab fa-tiktok"></i> TikTok 2</a>
-                        <a href="mailto:email@example.com"><i class="fas fa-envelope"></i> Email</a>
+                        <a href="mailto:josjis112233@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                     </div>
                     <div class="address">
-                        <p><i class="fas fa-map-marker-alt"></i> Kota, Negara</p>
-                        <p><i class="fas fa-phone"></i> +62 123 4567 890</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Temanggung, Indonesia</p>
                     </div>
                 </div>
             </div>
