--- a/index.html
+++ b/index.html
@@ -12,12 +12,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Theme Toggle -->
+    <div class="theme-toggle" id="themeToggle">
+        <i class="fas fa-moon"></i>
+    </div>
+
     <!-- Navigation Dots -->
     <div class="nav-dots">
         <a href="#home" class="dot active" data-section="home"></a>
         <a href="#about" class="dot" data-section="about"></a>
+        <a href="#skills" class="dot" data-section="skills"></a>
+        <a href="#experience" class="dot" data-section="experience"></a>
         <a href="#projects" class="dot" data-section="projects"></a>
+        <a href="#blog" class="dot" data-section="blog"></a>
+        <a href="#stats" class="dot" data-section="stats"></a>
         <a href="#contact" class="dot" data-section="contact"></a>
+    </div>
+
+    <!-- Loading Screen -->
+    <div class="loading-screen" id="loadingScreen">
+        <div class="loader">
+            <div class="loader-inner"></div>
+        </div>
+        <p>Memuat Portfolio...</p>
     </div>
 
     <!-- Home Section -->
@@ -39,13 +56,97 @@
             <div class="about-grid">
                 <div class="about-text">
                     <p>Halo! Saya adalah seorang developer yang masih dalam tahap belajar dan terus mengembangkan kemampuan dalam dunia pemrograman. Saya memiliki minat yang besar terhadap web development dan selalu bersemangat untuk mempelajari teknologi-teknologi baru. Meskipun masih dalam tahap pembelajaran, saya telah mengerjakan beberapa proyek yang dapat dilihat di bawah ini.</p>
-                    <div class="skills">
+                    <div class="skills-tags">
                         <span>HTML</span>
                         <span>CSS</span>
                         <span>JavaScript</span>
                     </div>
                     <div style="text-align: center; margin-top: 2rem;">
                         <a href="#projects" class="btn">Lihat Projek Saya</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="fullpage-section">
+        <div class="content">
+            <h2>Keahlian Saya</h2>
+            <div class="skills-container">
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">HTML</span>
+                        <span class="skill-percent">80%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" data-percent="80"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">CSS</span>
+                        <span class="skill-percent">70%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" data-percent="70"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">JavaScript</span>
+                        <span class="skill-percent">50%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" data-percent="50"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">Node.js</span>
+                        <span class="skill-percent">35%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" data-percent="35"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">MongoDB</span>
+                        <span class="skill-percent">10%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-progress" data-percent="10"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience" class="fullpage-section">
+        <div class="content">
+            <h2>Pengalaman & Timeline</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date">2024 - Sekarang</div>
+                    <div class="timeline-content">
+                        <h3>Web Developer (Freelance)</h3>
+                        <p>Mengembangkan berbagai website dan aplikasi web untuk klien. Fokus pada frontend development dengan HTML, CSS, dan JavaScript.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2023 - 2024</div>
+                    <div class="timeline-content">
+                        <h3>Belajar Web Development</h3>
+                        <p>Memulai perjalanan belajar web development secara otodidak. Mempelajari dasar-dasar HTML, CSS, JavaScript, dan berbagai framework modern.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2023</div>
+                    <div class="timeline-content">
+                        <h3>Project Pertama</h3>
+                        <p>Membuat website pertama untuk kelas 7E SMP Negeri 6 Temanggung. Project ini terus dikembangkan hingga sekarang.</p>
                     </div>
                 </div>
             </div>
@@ -77,16 +178,62 @@
         </div>
     </section>
 
+    <!-- Blog Section -->
+    <section id="blog" class="fullpage-section">
+        <div class="content">
+            <h2>Artikel & Blog</h2>
+            <div class="blog-container" id="blogContainer">
+                <div class="blog-loading">
+                    <i class="fas fa-spinner fa-spin"></i>
+                    <p>Memuat artikel...</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Statistics Section -->
+    <section id="stats" class="fullpage-section">
+        <div class="content">
+            <h2>Statistik</h2>
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <div class="stat-icon"><i class="fas fa-code"></i></div>
+                    <div class="stat-number" data-target="10">0</div>
+                    <div class="stat-label">Projek Selesai</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon"><i class="fas fa-users"></i></div>
+                    <div class="stat-number" data-target="8">0</div>
+                    <div class="stat-label">Klien Puas</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon"><i class="fas fa-clock"></i></div>
+                    <div class="stat-number" data-target="250">0</div>
+                    <div class="stat-label">Jam Coding</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon"><i class="fas fa-coffee"></i></div>
+                    <div class="stat-number" data-target="1000">0</div>
+                    <div class="stat-label">Cangkir Kopi</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="fullpage-section">
         <div class="content">
             <h2>Hubungi Saya</h2>
             <div class="contact-grid">
-                <form class="contact-form">
-                    <input type="text" placeholder="Nama Anda" required>
-                    <input type="email" placeholder="Email Anda" required>
-                    <textarea placeholder="Pesan Anda" required></textarea>
-                    <button type="submit" class="btn">Kirim Pesan</button>
+                <form class="contact-form" id="contactForm">
+                    <input type="text" name="name" id="contactName" placeholder="Nama Anda" required>
+                    <input type="email" name="email" id="contactEmail" placeholder="Email Anda" required>
+                    <input type="text" name="subject" id="contactSubject" placeholder="Subjek" required>
+                    <textarea name="message" id="contactMessage" placeholder="Pesan Anda" required></textarea>
+                    <button type="submit" class="btn">
+                        <span class="btn-text">Kirim Pesan</span>
+                        <span class="btn-loader" style="display: none;"><i class="fas fa-spinner fa-spin"></i></span>
+                    </button>
                 </form>
                 <div class="contact-info">
                     <div class="social-links">
