--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
                         <h3>Project Pertama</h3>
-                        <p>Membuat website pertama untuk kelas 7E SMP Negeri 6 Temanggung. Project ini terus dikembangkan hingga sekarang.</p>
+                        <p>Membuat website pertama Portfolio untuk memperkenalkan diri. Project ini terus dikembangkan hingga sekarang.</p>
                     </div>
                 </div>
             </div>
